<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".data.RegisterForm">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoApp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/nama"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/prompt_nama"
            android:padding="8dp"/>

        <EditText
            android:id="@+id/alamat"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_alamat"
            android:padding="8dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"/>

        <EditText
            android:id="@+id/username"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:padding="8dp" />

        <EditText
            android:id="@+id/password"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="8dp"/>

        <Button
            android:id="@+id/daftar"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_btn"
            android:text="@string/daftar"
            android:textColor="#ffff"/>

    </LinearLayout>
</RelativeLayout>